# DumpDateRS

./: .gitignore  Cargo.toml  LICENSE  README.md
.jules/: sentinel.md
migrations/: 20240101000000_initial_schema.sql  20241027000000_init.sql  20241027000001_add_date_index.sql
src/: bot_handler.rs  db.rs  db_tests.rs  main.rs  scheduler.rs  store.rs  waste.rs
