[package]
name = "dresden_waste_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.13", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tokio-cron-scheduler = "0.13"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
ical = "0.9"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
strum = "0.26"
strum_macros = "0.26"
futures = "0.3"

[profile.release]
lto = true
codegen-units = 1
